# near-private-data

./: .gitignore  Cargo.toml  README.md  flake.nix  pvk.key  rust-toolchain.toml
client/: Cargo.toml
client/cli/: Cargo.toml
client/cli/src/: highlight.rs  main.rs
client/lib/: Cargo.toml
client/lib/src/: channel.rs  combined.rs  group.rs  key_registry.rs  lib.rs  message_repository.rs  messenger.rs  wallet.rs
client/lib/tests/: test.rs
client/src/: channel.rs  combined.rs  config.rs  draw.rs  key_registry.rs  kill.rs  lib.rs  line_editor.rs  main.rs  message_repository.rs  messenger.rs  multiplex_threads.rs  proxy.rs  traits.rs  wallet.rs
client/src/channel/: group.rs  mod.rs  one_way_pair.rs
client/tests/: test.rs
contract/: Cargo.toml
contract/key-registry/: .gitignore  Cargo.toml
contract/message-repository/: Cargo.toml
document/: .gitignore  Makefile  biblio.bib  paper.md
documents/: flexible-channels.md  paper.md
key-manager/: Cargo.toml
key-manager/src/: lib.rs
key-registry/: Cargo.toml  Makefile.toml
key-registry/src/: lib.rs
key-repository/: Cargo.toml
key-repository/src/: lib.rs
message-repository/: Cargo.toml
message-repository/src/: filter.rs  lib.rs
template/: .gitignore  Makefile  MastersDoctoralThesis.cls  biblio.bib  main.tex  summary.txt
template/Chapters/: 00_Introduction.tex  01_Introduction.tex  01_PriorArt.tex  02_Background.tex  02_Proposal.tex  03_Implementation.tex  03_Proposal.tex  04_Conclusion.tex  05_PriorArt.tex
verify/: Cargo.toml
verify/src/: lib.rs
