[package]
edition = "2021"
name = "fc-client"
version = "0.1.0"

[lib]
name = "fc_client"
path = "src/lib.rs"

[[bin]]
name = "fc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
base64ct = { version = "1.5.3", features = ["alloc"] }
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
chrono = "=0.4.31"
console = "0.15.5"
crossterm = "0.26.1"
dialoguer = "0.10.3"
dotenvy = "0.15.6"
ed25519-dalek = "1.0.1"
envy = "0.4.2"
futures = "0.3.28"
near-crypto = "0.26.0"
near-jsonrpc-client = "0.13.0"
near-jsonrpc-primitives = "0.26.0"
near-primitives = "0.26.0"
rand = "0.7.0"
serde = "1.0.152"
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
tui = "0.19.0"
x25519-dalek = "1"

[dev-dependencies]
near-workspaces = { version = "0.14", features = ["unstable"] }
data-encoding = "2.6"
