[workspace]
resolver = "2"
members = ["cli", "lib"]

[workspace.dependencies]
anyhow = "1.0.69"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
chrono = "=0.4.31"
console = "0.15.5"
data-encoding = "2.6"
dotenvy = "0.15.6"
ed25519-dalek = "2.1.1"
envy = "0.4.2"
hkdf = "0.12.4"
near-crypto = "0.26.0"
near-jsonrpc-client = "0.13.0"
near-jsonrpc-primitives = "0.26.0"
near-primitives = "0.26.0"
near-workspaces = { version = "0.14", features = ["unstable"] }
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
