[workspace]
resolver = "2"
members = ["key-registry", "message-repository"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[workspace.dependencies]
cuckoofilter = "0.5.0"
near-sdk = "5.5.0"
near-sdk-contract-tools = "3.0.2"
siphasher = "0.3.10"
