[package]
name = "near-private-data-public-key-registry-contract"
edition = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
near-sdk = "4.1.1"
near-sdk-contract-tools = "0.7.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
