[package]
edition = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
name = "near-private-data-message-repository-contract"

[dependencies]
cuckoofilter = "0.5.0"
near-sdk = "4.1.1"
near-sdk-contract-tools = "0.7.2"
siphasher = "0.3.10"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
