[package]
authors = ["Jacob Lindahl <jacob.lindahl@near.org>"]
edition = "2021"
name = "fc-message-repository-contract"
version = "0.1.0"

[dependencies]
cuckoofilter = "0.5.0"
near-sdk = "5.5.0"
near-sdk-contract-tools = "3.0.2"
siphasher = "0.3.10"

[dependencies.borsh]
version = "*"
features = ["derive", "unstable__schema"]

[lib]
crate-type = ["cdylib"]
