[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = "0.25.0"
blstrs = "0.7.0"
ff = "0.13.0"
pairing = "0.23.0"
pqcrypto-kyber = "0.7.6"
rand = "0.8.5"
sha2 = "0.10.7"
verenc = "0.2.0"
anyhow = "1.0.71"