[package]
authors = ["Jacob Lindahl <lindahl@prg.is.titech.ac.jp>"]
edition = "2021"
name = "fc-message-repository-contract"
version = "0.1.0"

[dependencies]
cuckoofilter.workspace = true
near-sdk.workspace = true
near-sdk-contract-tools.workspace = true
siphasher.workspace = true

[dependencies.borsh]
version = "*"
features = ["derive", "unstable__schema"]

[lib]
crate-type = ["cdylib"]
